Prevent text wrapping in textarea input capture

--- a/index.css
+++ b/index.css
@@ -39,6 +39,11 @@
     padding: 0;
     resize: none;
     pointer-events: none;
+
+    /** Prevent wrapping */
+    white-space: pre;
+    overflow-wrap: normal;
+    overflow-x: scroll;
 }
 
 /* 
